fix menu cutoff

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -79,7 +79,7 @@ header {
       width: 100%;
 
       .categories {
-        position: relative;
+        margin-bottom: 10em;
       }
     }
   }
